new file:   MODULO-CSS/CSS/style.css 	new file:   MODULO-CSS/assets/istockphoto-485371557-612x612.jpg 	modified:   MODULO-CSS/index.html 	new file:   PROJETO-FINAL/CSS/style.css 	new file:   PROJETO-FINAL/images/DEPOIMENTO1.png 	new file:   PROJETO-FINAL/images/LOGO1.png 	new file:   PROJETO-FINAL/images/LOGO2.png 	new file:   PROJETO-FINAL/images/LOGO3.png 	new file:   PROJETO-FINAL/images/LOGO4.png 	new file:   PROJETO-FINAL/images/LOGO5.png 	new file:   PROJETO-FINAL/images/RATE.svg 	new file:   PROJETO-FINAL/images/banner_meio.svg 	new file:   PROJETO-FINAL/images/bg.svg 	new file:   PROJETO-FINAL/images/checklist.svg 	new file:   PROJETO-FINAL/images/icon1.svg 	new file:   PROJETO-FINAL/images/icon2.svg 	new file:   PROJETO-FINAL/images/icon3.svg 	new file:   PROJETO-FINAL/images/logoagencia.svg 	new file:   PROJETO-FINAL/images/mackbook.png 	new file:   PROJETO-FINAL/images/mockup.svg 	new file:   PROJETO-FINAL/index.html

--- a/MODULO-CSS/index.html
+++ b/MODULO-CSS/index.html
@@ -1,8 +1,20 @@
-<html>
-    <head>
-        <title>Módulo CSS</title>
-    </head>
-    <body>
-        
-    </body>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Formulário de Contato</title>
+  <link rel="stylesheet" href="CSS/style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1 class="logo">&lt;<span>danki.code</span>&gt;</h1>
+    <form class="formulario">
+      <input type="text" placeholder="Seu nome..." required />
+      <input type="email" placeholder="Seu e-mail..." required />
+      <textarea placeholder="Sua mensagem..." required></textarea>
+      <button type="submit">Enviar!</button>
+    </form>
+  </div>
+</body>
 </html>
